WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52565
HTMLFormElement::checkValidity() returns incorrect result if 'invalid' events are canceled.
https://bugs.webkit.org/show_bug.cgi?id=52565
Summary
HTMLFormElement::checkValidity() returns incorrect result if 'invalid' events...
Kent Tamura
Reported
2011-01-17 03:43:34 PST
HTMLFromElement::checkValidity() returns incorrect result if 'invalid' events are canceled.
Attachments
Patch
(11.10 KB, patch)
2011-01-17 03:54 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-01-17 03:54:55 PST
Created
attachment 79150
[details]
Patch
Kent Tamura
Comment 2
2011-01-17 03:57:23 PST
The specification [1] says HTMLFormElement::checkValidity() result should check existence of invalid controls, not unhandled invalid controls. [1]
http://www.whatwg.org/specs/web-apps/current-work/multipage/association-of-controls-and-forms.html#constraint-validation
Dimitri Glazkov (Google)
Comment 3
2011-01-25 17:53:18 PST
Comment on
attachment 79150
[details]
Patch ok.
Kent Tamura
Comment 4
2011-01-25 20:01:05 PST
Landed:
http://trac.webkit.org/changeset/76663
WebKit Review Bot
Comment 5
2011-01-25 20:53:51 PST
http://trac.webkit.org/changeset/76663
might have broken Leopard Intel Release (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug