Source/WebCore/html/HTMLFormElement.h
@@ -144,8 +144,9 @@ private:
     bool validateInteractively(Event*);
 
     // Validates each of the controls, and stores controls of which 'invalid'
-    // event was not canceled to the specified vector.
-    void collectUnhandledInvalidControls(Vector<RefPtr<FormAssociatedElement> >&);
+    // event was not canceled to the specified vector. Returns true if there
+    // are any invalid controls in this form.
+    bool checkInvalidControlsAndCollectUnhandled(Vector<RefPtr<FormAssociatedElement> >&);
 
     void broadcastFormEvent(const AtomicString&);
 
